--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "prisma:dev:deploy":"prisma migrate deploy",
-    "db:dev:rm":"",
-    "db:dev:up":"docker compose restart local-db",
-    "db:dev:restart":"npm run db:dev:up && npm run prisma:dev:deploy",
+    "db:container:restart":"docker compose restart local-db",
+    "db:dev:restart":"npm run db:container:restart && npm run prisma:dev:deploy",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
