--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "prisma:dev:deploy":"prisma migrate deploy",
-    "db:container:restart":"docker compose restart local-db",
-    "db:dev:restart":"npm run db:container:restart && npm run prisma:dev:deploy",
+    "prisma:dev:deploy": "prisma migrate deploy",
+    "db:container:restart": "docker compose restart local-db",
+    "db:dev:restart": "npm run db:container:restart && npm run prisma:dev:deploy",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -24,7 +24,9 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.5.2",
     "bcrypt": "^5.1.1",
